Crash on material without material Output node #118184

Closed
opened 2024-02-13 06:36:55 +01:00 by CarstenSalzberg · 4 comments

System Information
Operating system: windows 10
Graphics card: 1070

Blender Version
Broken: nightly build from today beta and alpha

Short description of error
when i load my .blend file within blender 4.1 beta nothing happens. when i start blender by clicking the .blend file it crashes.
with the alpha build it crashes in any case of loading.

this is another case where, the file makes visibility problems, look at the two last post.
#117619

Exact steps for others to reproduce the error
just double click the blend file :)

edit:
4.0 can load the file in booth ways.

**System Information** Operating system: windows 10 Graphics card: 1070 **Blender Version** Broken: nightly build from today beta and alpha **Short description of error** when i load my .blend file within blender 4.1 beta nothing happens. when i start blender by clicking the .blend file it crashes. with the alpha build it crashes in any case of loading. this is another case where, the file makes visibility problems, look at the two last post. https://projects.blender.org/blender/blender/issues/117619 **Exact steps for others to reproduce the error** just double click the blend file :) edit: 4.0 can load the file in booth ways.
CarstenSalzberg added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-02-13 06:36:56 +01:00

after i played with anthoer file (that is heavy editid version of the first) i found out that the crash also happend with this file, but not with a later and more heavy edited version of it.
Can´t upload booth the file now(don´t know why)

after i played with anthoer file (that is heavy editid version of the first) i found out that the crash also happend with this file, but not with a later and more heavy edited version of it. Can´t upload booth the file now(don´t know why)

Hi, thanks for report, can you manually tried to open your file in this versions: 3.6, 4.1?

Hi, thanks for report, can you manually tried to open your file in this versions: 3.6, 4.1?
Member

Can confirm a rash if a material has no Output node.

Caused by 7e8fd2cc2c

Code added in above commit didnt take into account that we might have no output node in the tree.

Can confirm a rash if a material has no `Output` node. Caused by 7e8fd2cc2c09acfedbe6650da8d1c43c94ba3af8 Code added in above commit didnt take into account that we might have no output node in the tree.
Member

Fix PR incoming...

Fix PR incoming...
Philipp Oeser changed title from crash on loading file. to Crash on material without material Output node 2024-02-13 12:53:46 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-13 13:08:39 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118184
No description provided.