Fix #118184: crash deleting a material output node

Caused by 7e8fd2cc2c09

Code added in above commit didnt take into account that we might have no
output node in the tree.

Pull Request: https://projects.blender.org/blender/blender/pulls/118202